added individual buttons to packages

--- a/march-update/packages/packages.html
+++ b/march-update/packages/packages.html
@@ -112,6 +112,13 @@
                                 </p>
                                 <div class="cost">
                                     Starting at $1249
+                                </div>
+                                <div class="packages-btn">
+                                    <a href="mailto:aleia@aleiawalker.com?Subject=I'm%20interested%20in%20your%20Level%20Up%20Package!" target="_blank">
+                                        <button>
+                                            <p>Book Level Up</p>
+                                        </button>
+                                    </a>
                                 </div>  
                             </div>
                         </div>
@@ -135,6 +142,13 @@
                                 <div class="cost">
                                     Starting at $749
                                 </div>
+                                <div class="packages-btn">
+                                    <a href="mailto:aleia@aleiawalker.com?Subject=I'm%20interested%20in%20your%20Portfolio%20Package!" target="_blank">
+                                        <button>
+                                            <p>Book Portfolio</p>
+                                        </button>
+                                    </a>
+                                </div>  
                             </div>
                         </div>
                     </article>
@@ -157,6 +171,13 @@
                                 <div class="cost">
                                     Starting at $499
                                 </div>
+                                <div class="packages-btn">
+                                    <a href="mailto:aleia@aleiawalker.com?Subject=I'm%20interested%20in%20your%20Designers%20Only%20Package!" target="_blank">
+                                        <button>
+                                            <p>Book Designers Only</p>
+                                        </button>
+                                    </a>
+                                </div>  
                             </div>
                         </div>
                     </article>
@@ -179,14 +200,16 @@
                             <div class="cost">
                                 Starting at $99
                             </div>
+                            <div class="packages-btn">
+                                <a href="mailto:aleia@aleiawalker.com?Subject=I'm%20interested%20in%20your%20Entry%20Level%20Package!" target="_blank">
+                                    <button>
+                                        <p>Book Entry Level</p>
+                                    </button>
+                                </a>
+                            </div>  
                         </div>
                         </div>
                 </article>
-                </div>
-                <div class="packages-button">
-                    <button>
-                        <a href="mailto:aleia@aleiawalker.com?Subject=Love%20your%20site!%20Let's%20talk.%20"><p>Sign me up</p></a>
-                    </button>
                 </div>
 
         </section>    
