finalized styles for packages buttons

--- a/march-update/packages/packages.html
+++ b/march-update/packages/packages.html
@@ -131,6 +131,7 @@
                                 </header>
                             </div>
                             <div class="card-copy">
+                                <div>
                                 <header>
                                     <p class="card-tags">
                                         ux/ui design, development, hosting
@@ -139,6 +140,7 @@
                                 <p class="card-description">
                                     Portfolio is a package for artists and others establishing a center for their brand on the web but without all of the bells and whistles. Together, we would go through the same process described here and create your responsive portfolio site.  
                                 </p>
+                                </div>
                                 <div class="cost">
                                     Starting at $749
                                 </div>
