fixed broken link on homepage and added blank target to all homepage links

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -114,9 +114,9 @@
                 </div>
 
                 <div class="links">
-                    <p>Read <a href="about/about.html">'My Story'.</a></p>
-                    <p>Check out what <a href="">I've worked on.</a></p>
-                    <p>Read <a href="/blog">the archives.</a></p>
+                    <p>Read <a href="about/about.html" target="_blank">'My Story'.</a></p>
+                    <p>Check out what <a href="portfolio/portfolio.html" target="_blank">I've worked on.</a></p>
+                    <p>Read <a href="/blog" target="_blank">the archives.</a></p>
                     <p>Or <a href="mailto:aleia@aleiawalker.com?Subject=Love%20your%20site!%20Let's%20talk.%20" target="_blank">get in touch.</a></p>
                 </div>
             </div>
