fixed typo on packages page

--- a/march-update/packages/packages.html
+++ b/march-update/packages/packages.html
@@ -108,7 +108,7 @@
                                     </p>
                                 </header>
                                 <p class="card-description">
-                                    This package is for the individual or small business establishing (or reinvent) their web presence. It is the most comprehensive package and includes fully-repsonsive design, user research, and coding from the ground up.
+                                    This package is for the individual or small business establishing (or reinvent) their web presence. It is the most comprehensive package and includes fully-responsive design, user research, and coding from the ground up.
                                 </p>
                                 <div class="cost">
                                     Starting at $1249
