fixed margin issues for hire me section

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -124,7 +124,7 @@
 
         <footer class="footer">
             <div class="footer-copy">
-                <p class="hairline footer-tag">Aleia elsewhere on the web</p>
+                <p class="footer-tag">Aleia elsewhere on the web</p>
                 <ul class="social">
                     <li>
                         <a href="http://twitter.com/msaleia">
