updated links to remove file extensions

--- a/march-update/about/about-aleia/aleia-dev/index.html
+++ b/march-update/about/about-aleia/aleia-dev/index.html
@@ -14,10 +14,10 @@
         <!-- Place favicon.ico in the root directory -->
         <link rel="icon" href="../../favicon.ico">
 
-        <link rel="stylesheet" href="../../css/normalize.css">
-        <link rel="stylesheet" href="../../css/main.css">
-        <link rel="stylesheet" href="../../css/font-awesome.css">
-        <link rel="stylesheet" href="../../css/font-awesome.min.css">
+        <link rel="stylesheet" href="../../../css/normalize.css">
+        <link rel="stylesheet" href="../../../css/main.css">
+        <link rel="stylesheet" href="../../../css/font-awesome.css">
+        <link rel="stylesheet" href="../../../css/font-awesome.min.css">
         <script src="../../js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -27,7 +27,7 @@
         <div class="wrapper">
             <header class="page-header gray-alt">
                 <figure class="logo">
-                    <a href="../../index.html"><img src="../../img/logo-dark.svg"/></a>
+                    <a href="../../../"><img src="../../../img/logo-dark.svg"/></a>
                 </figure>
                 <figure>
                 <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
@@ -37,37 +37,37 @@
                 <div class="menu-wrapper">
                     <ul class="menu-active">
                         <li>
-                            <a href="../../index.html">
+                            <a href="../../../">
                                 Home                                
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="../about/about.html">
+                            <a href="../../about/">
                                 My Story
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="../../packages/packages.html">
+                            <a href="../../../packages/">
                                 Packages
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="../../portfolio/portfolio.html">
+                            <a href="../../../portfolio/">
                                 Portfolio
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="../../process/process.html">
+                            <a href="../../../process/">
                                 Process
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="../../blog">
+                            <a href="../../../blog">
                                 Archives
                             </a>
                         </li>
@@ -84,7 +84,7 @@
                         <p class="dev-tagline">I design mobile first.</p>
                         <div class="spacer-a"></div>
                             <figure>
-                                <a href="http://aleiawalker.com"><img class="figure-single" src="../../img/mobile-mockup.png"/></a>
+                                <a href="../../../"><img class="figure-single" src="../../../img/mobile-mockup.png"/></a>
                             </figure>
                         </div>
                         <div class="flexbox">
@@ -95,10 +95,10 @@
                             <div class="spacer-a"></div>
                             <aside class="duo">
                                 <figure class="figure-duo">
-                                    <a href="https://github.com/MsAleia/portfolio/tree/master/portfolio/flexbox"><img src="../../img/sublime.png"></a>
+                                    <a href="https://github.com/MsAleia/portfolio/tree/master/portfolio/flexbox"><img src="../../../img/sublime.png"></a>
                                 </figure>
                                 <figure class="figure-duo">
-                                    <a href="http://aleiawalker.com/portfolio/flexbox/index.html"><img src="../../img/flexbox.png"></a>
+                                    <a href="http://aleiawalker.com/portfolio/flexbox/"><img src="../../../img/flexbox.png"></a>
                                 </figure>
                             </aside>
                         </div>
@@ -109,7 +109,7 @@
                         </p>
                         <div class="spacer-a"></div>
                         <figure class="figure-single">
-                            <a href="workingtobeawesome.com"><img src="../../img/wtba.png"></a>
+                            <a href="workingtobeawesome.com"><img src="../../../img/wtba.png"></a>
                         </figure>
                     </div>
                     <div class="interested">
@@ -120,15 +120,15 @@
                         <div class="spacer-a"></div>
                         <aside class="duo">
                             <figure class="figure-duo">
-                                <a href="http://aleiawalker.com" alt="portfolio mockup and link to portfolio site"><img src="../../img/desktop-mockup.png"></a>
+                                <a href="../../../" alt="portfolio mockup and link to portfolio site"><img src="../../../img/desktop-mockup.png"></a>
                             </figure>
                             <figure class="figure-duo">
-                                <a href="https://github.com/msaleia" alt="link to github repos"><img src="../../img/iterm.png"></a>
+                                <a href="https://github.com/msaleia" alt="link to github repos"><img src="../../../img/iterm.png"></a>
                             </figure>
                         </aside>
                     </div>
                 <div>
-                    <p class="aleia-link"><a href="about-aleia.html">to About Aleia</a></p>
+                    <p class="aleia-link"><a href="about-aleia/">to About Aleia</a></p>
                 </div>
             </div>
             </section>
@@ -137,22 +137,22 @@
                     <p class="hairline footer-tag">Aleia elsewhere on the web</p>
                     <ul class="social">
                         <li>
-                            <a href="http://twitter.com/msaleia">
+                            <a href="https://twitter.com/msaleia">
                                 <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="http://github.com/msaleia">
+                            <a href="https://github.com/msaleia">
                                 <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="http://linkedin.com/in/aleiawalker">
+                            <a href="https://linkedin.com/in/aleiawalker">
                                 <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="http://behance.net/aleiawalker">
+                            <a href="https://behance.net/aleiawalker">
                                 <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
                             </a>
                         </li>
