--- a/march-update/about/about-aleia/index.html
+++ b/march-update/about/about-aleia/index.html
@@ -27,7 +27,7 @@
     <div class="wrapper">
         <header class="page-header gray-alt">
             <figure class="logo">
-                <a href="../../index.html"><img src="../../img/logo-dark.svg"/></a>
+                <a href="../../"><img src="../../img/logo-dark.svg"/></a>
             </figure>
             <figure>
                 <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
@@ -37,31 +37,31 @@
                 <div class="menu-wrapper">
                     <ul class="menu-active">
                         <li>
-                            <a href="../../index.html">
+                            <a href="../../">
                                 Home                                
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="../about.html">
+                            <a href="../">
                                 My Story
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="../../packages/packages.html">
+                            <a href="../../packages/">
                                 Packages
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="../../portfolio/portfolio.html">
+                            <a href="../../portfolio/">
                                 Portfolio
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="../../process/process.html">
+                            <a href="../../process/">
                                 Process
                             </a>
                         </li>
@@ -107,7 +107,7 @@
 					</p>
 				</aside> 
 				<div>
-			        <p class="aleia-link"><a href="aleia-dev.html">to Aleia + Dev</a></p>
+			        <p class="aleia-link"><a href="aleia-dev/">to Aleia + Dev</a></p>
 			    </div>
 			</div>
 		</section>
@@ -116,22 +116,22 @@
                 <p class="hairline footer-tag">Aleia elsewhere on the web</p>
                 <ul class="social">
                     <li>
-                        <a href="http://twitter.com/msaleia">
+                        <a href="https://twitter.com/msaleia">
                             <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="http://github.com/msaleia">
+                        <a href="https://github.com/msaleia">
                             <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="http://linkedin.com/in/aleiawalker">
+                        <a href="https://linkedin.com/in/aleiawalker">
                             <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="http://behance.net/aleiawalker">
+                        <a href="https://behance.net/aleiawalker">
                             <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
                         </a>
                     </li>
