--- a/march-update/index.html
+++ b/march-update/index.html
@@ -49,25 +49,25 @@
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="about/about.html">
+                            <a href="about/">
                                 My Story
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="packages/packages.html">
+                            <a href="packages/">
                                 Packages
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="portfolio/portfolio.html">
+                            <a href="portfolio/">
                                 Portfolio
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="process/process.html">
+                            <a href="process/">
                                 Process
                             </a>
                         </li>
@@ -86,7 +86,7 @@
                 <div class="hero-copy">
                     <p class="hero-intro"><span class="accent-word bright">Hi.</span> <span class="uppercase hairline">My name is</span></p>
                     <h1 class="uppercase">Aleia Walker</h1>
-                    <p class="hero-tagline hairline">ui/ux designer + frontend developer</p>
+                    <p class="hero-tagline hairline">frontend developer + instructor + <a href="https://barrebodyspirits.com" target="_blank">full-time side-hustler</a></p>
                 </div>
             </div>
         </section>
@@ -96,13 +96,13 @@
                     <div class="hire-me">
                         <p class="hire-copy">Looking to start a new project</p>
                             <button>
-                                <a href="packages/packages.html"><p>Hire Me</p></a>
+                                <a href="packages/"><p>Hire Me</p></a>
                             </button>
                     </div>
                     <div class="hire-me">
                         <p class="hire-copy">Looking for a long-term designer and/or developer</p>
                             <button>
-                                <a href="portfolio/portfolio.html">
+                                <a href="portfolio/">
                                     <p>Hire Me</p>
                                 </a>
                             </button>
@@ -114,8 +114,8 @@
                 </div>
 
                 <div class="links">
-                    <p>Read <a href="about/about.html" target="_blank">'My Story'.</a></p>
-                    <p>Check out what <a href="portfolio/portfolio.html" target="_blank">I've worked on.</a></p>
+                    <p>Read <a href="about/" target="_blank">'My Story'.</a></p>
+                    <p>Check out what <a href="portfolio/" target="_blank">I've worked on.</a></p>
                     <p>Read <a href="/blog" target="_blank">the archives.</a></p>
                     <p>Or <a href="mailto:aleia@aleiawalker.com?Subject=Love%20your%20site!%20Let's%20talk.%20" target="_blank">get in touch.</a></p>
                 </div>
@@ -127,22 +127,22 @@
                 <p class="footer-tag">Aleia elsewhere on the web</p>
                 <ul class="social">
                     <li>
-                        <a href="http://twitter.com/msaleia">
+                        <a href="https://twitter.com/msaleia">
                             <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="http://github.com/msaleia">
+                        <a href="https://github.com/msaleia">
                             <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="http://linkedin.com/in/aleiawalker">
+                        <a href="https://linkedin.com/in/aleiawalker">
                             <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="http://behance.net/aleiawalker">
+                        <a href="https://behance.net/aleiawalker">
                             <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
                         </a>
                     </li>
