--- a/march-update/portfolio/index.html
+++ b/march-update/portfolio/index.html
@@ -42,7 +42,7 @@
         <div class="wrapper">
         <header class="page-header">
             <figure class="logo">
-                <img src="../img/logo.svg"/>
+                <a href="../"><img src="../img/logo.svg"/>
             </figure>
             <figure>
                 <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
@@ -52,31 +52,31 @@
             <div class="menu-wrapper">
                 <ul class="menu-active">
                     <li>
-                        <a href="../index.html">
+                        <a href="../">
                             Home                                
                         </a>
                     </li>
                     <li class ="spacer"></li>
                     <li>
-                        <a href="../about/about.html">
+                        <a href="../about/">
                             My Story
                         </a>
                     </li>
                     <li class ="spacer"></li>
                     <li>
-                        <a href="../packages/packages.html">
+                        <a href="../packages/">
                             Packages
                         </a>
                     </li>
                     <li class ="spacer"></li>
                     <li>
-                        <a href="portfolio.html">
+                        <a href="#">
                             Portfolio
                         </a>
                     </li>
                     <li class ="spacer"></li>
                     <li>
-                        <a href="../process/process.html">
+                        <a href="../process/">
                             Process
                         </a>
                     </li>
@@ -136,7 +136,7 @@
                         </div> -->
                         <div class="content">
                             <figure>
-                                <a href="examples/loud-vibes"><img src="../img/loud-vibes.svg"></a>
+                                <a href="examples/loud-vibes/"><img src="../img/loud-vibes.svg"></a>
                             </figure>
                             <div>
                                 <p class="content-description">
@@ -167,7 +167,7 @@
                     </div>
                     <div class="portfolio-content">
                         <div class="content-title">
-                            <a href="examples/geolocation">Are You Lost?</a>
+                            <a href="examples/geolocation/">Are You Lost?</a>
                         </div>
                         <div class="content">
                             <!-- <figure>
@@ -198,7 +198,7 @@
                     </div>
                     <div class="portfolio-content">
                         <div class="content-title">
-                            <a href="examples/flexbox">Example Bio Page</a>
+                            <a href="examples/flexbox/">Example Bio Page</a>
                         </div>
                         <div class="content">
                             <!-- <figure>
@@ -229,7 +229,7 @@
                         </div> -->
                         <div class="content">
                             <figure>
-                                <a href="http://behance.net/aleiawalker"><img src="../img/aleia-logo-orig.svg"></a>
+                                <a href="https://behance.net/aleiawalker"><img src="../img/aleia-logo-orig.svg"></a>
                             </figure>
                             <div>
                                 <p class="content-description">
@@ -260,7 +260,7 @@
                             </figure> -->
                             <div>
                                 <p class="content-description">
-                                    Do you want to be here? Take a look at <a href="../packages/packages.html">these.</a>
+                                    Do you want to be here? Take a look at <a href="../packages/">these.</a>
                                 </p>
                             </div>
                         </div>
@@ -273,22 +273,22 @@
                 <p class="hairline footer-tag">Aleia elsewhere on the web</p>
                 <ul class="social">
                     <li>
-                        <a href="http://twitter.com/msaleia">
+                        <a href="https://twitter.com/msaleia">
                             <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="http://github.com/msaleia">
+                        <a href="https://github.com/msaleia">
                             <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="http://linkedin.com/in/aleiawalker">
+                        <a href="https://linkedin.com/in/aleiawalker">
                             <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="http://behance.net/aleiawalker">
+                        <a href="https://behance.net/aleiawalker">
                             <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
                         </a>
                     </li>
