--- a/march-update/process/index.html
+++ b/march-update/process/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html class="no-js" lang="">
     <head>
-
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Aleia Walker</title>
+        <title>Aleia Walker - Process'</title>
         <meta name="description" content="Aleia Walker is a frontend web developer and designer based in Atlanta who wants to design and build your website.">
         <meta name="keywords" content="aleia walker, aleia, freelance writer, writing, web design, web designer, web development, customer support, atlanta, caribbean" >
         <meta name="author" content="Aleia Walker" >
@@ -16,6 +15,7 @@
         <link rel="stylesheet" type="text/css" href="../fonts/MyFontsWebfontsKit/MyFontsWebfontsKit.css">
         <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 
+        <link rel="apple-touch-icon" href="../apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
         <link rel="icon" href="../favicon.ico">
 
@@ -32,43 +32,43 @@
 
         <!-- Add your site or application content here -->
         <div class="wrapper">
-        <header class="page-header light-alt">
-            <figure class="logo">
-                <a href="../index.html"><img src="../img/logo-dark.svg"/></a>
-            </figure>
-            <figure>
-                <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
-            </figure>
-        </header>
+            <header class="page-header gray-alt">
+                <figure class="logo">
+                    <a href="../index.html"><img src="../img/logo-dark.svg"/></a>
+                </figure>
+                <figure>
+                    <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
+                </figure>
+            </header>
         <section id="menu-main" class="uppercase">
                 <div class="menu-wrapper">
                     <ul class="menu-active">
                         <li>
-                            <a href="../index.html">
+                            <a href="../">
                                 Home                                
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="about.html">
+                            <a href="../about/">
                                 My Story
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="../packages/packages.html">
+                            <a href="../packages/">
                                 Packages
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="../portfolio/portfolio.html">
+                            <a href="#">
                                 Portfolio
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="../process/process.html">
+                            <a href="../process/">
                                 Process
                             </a>
                         </li>
@@ -81,51 +81,81 @@
                     </ul>
                 </div>
             </section>
-            <div class="menu-hide">        
-            <section class="about-aleia">
-                <div class="title uppercase">
-                    <a href="sub-folders/about-aleia.html">
-                        <header>
-                            <p class="aleia-title-display">About</p>
-                            <p class="title-sans">Aleia</p>
+            <section class="packages-main process-main">
+                <div class="packages-wrapper process-wrapper">
+                    <div class="packages-header-wrapper process-header-wrapper">
+                        <header class="packages-header process-header">
+                            <h1 class="packages-intro process-intro uppercase">Process</h1>
+                            <div class="spacer-a small-spacer"></div>
                         </header>
-                    </a>
-                </div>
-            </section>
-            <section class="about-dev">
-                <div class="title uppercase">
-                    <a href="sub-folders/aleia-dev.html">
-                        <header>
-                            <p class="dev-title-display">Aleia</p>
-                            <p class="title-sans">+ Dev</p>
-                        </header>
-                    </a>
-                    <p>
+                    </div>
 
-                    </p>
-                </div>
-            </section>
-            <footer>
+            <article class="phase"> <!-- Phase 0 -->
+                <header class="phase-number">
+                    Phase 0
+                </header>
+                <p class="phase-subtitle">
+                    User Research
+                </p>
+                <p class="phase-copy">
+                    This is the most important step in laying out your website content. It’s also where I tell you that your user is not everyone. And you listen to me.
+                </p>
+            </article>
+            <article class="phase"> <!-- Phase 1 -->
+                <header class="phase-number">
+                    Phase 1
+                </header>
+                <p class="phase-subtitle">
+                    Design
+                </p>
+                <p class="phase-copy">
+                    This phases starts by creating a written layout guiding the creation of the site. And this is where all the pretty things including type, color, and layout are decided on.
+                </p>
+            </article>
+            <article class="phase"> <!-- Phase 2 -->
+                <header class="phase-number">
+                    Phase 2
+                </header>
+                <p class="phase-subtitle">
+                    Development
+                </p>
+                <p class="phase-copy">
+                    This is where I disappear into my code editor and make all the pretty things play nicely together on the web. I also enjoy my rations of Avocado Smoothies, Hasbro Gummy Bears, and Wedding Cake Cupcakes.
+                </p>
+            </article>
+            <article class="phase"> <!-- Phase 3 -->
+                <header class="phase-number">
+                    Phase 3
+                </header>
+                <p class="phase-subtitle">
+                    Testing + Development
+                </p>
+                <p class="phase-copy">
+                    Site goes live! And then we hop on a Google Hangout to walkthrough the site. If we notice any bugs, I squash them and present you with the keys (passwords) to your shiny new website.  
+                </p>
+            </article>
+        </section>
+        <footer>
             <div class="footer-copy">
                 <p class="hairline footer-tag">Aleia elsewhere on the web</p>
                 <ul class="social">
                     <li>
-                        <a href="http://twitter.com/msaleia">
+                        <a href="https://twitter.com/msaleia">
                             <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="http://github.com/msaleia">
+                        <a href="https://github.com/msaleia">
                             <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="http://linkedin.com/in/aleiawalker">
+                        <a href="https://linkedin.com/in/aleiawalker">
                             <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="http://behance.net/aleiawalker">
+                        <a href="https://behance.net/aleiawalker">
                             <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
                         </a>
                     </li>
@@ -136,12 +166,8 @@
                     </li>
                 </ul>
             </footer>
-            </div> <!-- menu hide -->
-        </div> <!-- wrapper -->
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        </div>
+
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
